[package]
name = "FileEncryption"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"      # AES-GCM encryption
rsa = "0.6.0"
rand = "0.8"          # Random number generation for IV
rfd = "0.12"          # File dialog for choosing files
eframe = "0.26"  # GUI framework based on egui
pbkdf2 = "0.9"  # For secure key derivation
hmac = "0.12"   # For HMAC (used by PBKDF2)
sha2 = "0.10"   # For SHA-256 (used in PBKDF2)
argon2 = "0.5"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15"
once_cell = "1.17"
win-crypto-ng = "0.5.1"
