[package]
name = "FileEncryption"
version = "0.1.0"
edition = "2021"


[dependencies]
aes-gcm = "0.10"      # AES-GCM encryption
rsa = "0.6.0"
rand = "0.8"          # Random number generation for IV
rfd = "0.12"          # File dialog for choosing files
eframe = "0.26"  # GUI framework based on egui
pbkdf2 = { version = "0.10", default-features = false } 
password-hash = "0.5"  
subtle = "2.5"  # Explicitly require subtle v2.5 to match digest
google-cloud-auth = "0.12"  # Ensure latest compatible version

hmac = "0.12"   # For HMAC (used by PBKDF2)
sha2 = "0.10"   # For SHA-256 (used in PBKDF2)
argon2 = "0.5"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
google-secretmanager1 = "5.0"
hyper = "0.14"
hyper-rustls = "0.23"
tokio = { version = "1", features = ["full"] }

dotenvy = "0.15"
once_cell = "1.17"
win-crypto-ng = "0.5.1"
digest = "0.10.7"
firebase-auth = "0.5.0"
yup-oauth2 = "8.3.0"
hex = "0.4"
ratatui = "0.26"  
crossterm = "0.27"  # Required for terminal handling

[[bin]]
name = "cli_terminal"
path = "src/cli.rs"
