[package]
name = "FileEncryption"
version = "0.1.0"
edition = "2021"


[dependencies]
aes-gcm = "0.10"      # AES-GCM encryption
rsa = "0.6.0"
rand = "0.8"          # Random number generation for IV
rfd = "0.12"          # File dialog for choosing files
eframe = "0.26"  # GUI framework based on egui
pbkdf2 = { version = "0.10", default-features = false } 
password-hash = "0.5"  
subtle = "2.5"  # Explicitly require subtle v2.5 to match digest
google-cloud-auth = "0.12"  # Ensure latest compatible version

hmac = "0.12"   # For HMAC (used by PBKDF2)
sha2 = "0.10"   # For SHA-256 (used in PBKDF2)
argon2 = "0.5"
base64 = "0.21"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
google-secretmanager1 = "5.0"
hyper = "0.14"
hyper-rustls = "0.23"

dotenvy = "0.15"
win-crypto-ng = "0.5.1"
digest = "0.10.7"
firebase-auth = "0.5.0"
yup-oauth2 = "8.3.0"
hex = "0.4"  
anyhow = "1.0"

get_if_addrs = "0.5"
ratatui = "0.29.0"
tokio = "1.44.2"
once_cell = "1.21.3"
chrono = "0.4.40"
crossterm = "0.29.0"
goblin = "0.9.3"
clap = "4.5.37"
dotenv = "0.15.0"
tokio-util = "0.7.15"

[[bin]]
name = "cli_terminal"
path = "src/cli.rs"
